--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,9 @@ allprojects {
     repositories {
         google()
         jcenter()
-
+        maven {
+            url  "https://dl.bintray.com/hide-kc/maven"
+        }
     }
 }
 
