--- a/helloworld/deploy.gradle
+++ b/helloworld/deploy.gradle
@@ -1,26 +1,56 @@
 apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
 apply plugin: 'org.jetbrains.dokka-android'
-apply plugin: 'signing'
+apply plugin: 'com.jfrog.bintray'
 
 ext {
-  groupId = 'work.kcpoipoi'
-  artifactId = 'helloworld'
-  libVersion = '0.0.1'
-  libName = 'HelloWorld'
-  desc = 'How to make android library for Tech07.'
+  libArtifactId = "helloworldlibrary"
+  libGroupId = "work.kcs_labo"
+  libVersion = "0.0.1"
+  libName = 'HelloWorldLibrary'
+  libDescription = 'Android sample library for Tech07.'
+  devId = 'hide-kc'
+  devName = 'KC'
+  devMail = 'kcs.dev.labo@gmail.com'
+  licenseName = 'MIT'
+  licenseUrl = 'https://opensource.org/licenses/mit-license.php'
 }
+
+// This is the library version used when deploying the artifact
+project.version = libVersion
 
 dokka {
   outputFormat = 'html'
   outputDirectory = "$buildDir/javadoc"
 }
 
-group = groupId
-version = libVersion
+task sourcesJar(type: Jar) {
+  classifier = 'sources'
+  from android.sourceSets.main.java.srcDirs
+}
 
-def siteUrl = "https://github.com/Hide-KC/PinningListView"
-def gitUrl = "https://github.com/Hide-KC/PinningListView.git"
+task javadocJar(type: Jar, dependsOn: dokka) {
+
+}
+
+def pomConfig = {
+  licenses {
+    license {
+      name licenseName
+      url licenseUrl
+      distribution "repo"
+    }
+  }
+  developers {
+    developer {
+      id devId
+      name devName
+      email devMail
+    }
+  }
+  scm {
+    url "https://github.com/Hide-KC/HelloWorldLibrary"
+  }
+}
 
 def loadProperties(filename) {
   def props = new Properties()
@@ -32,39 +62,38 @@ def loadProperties(filename) {
 
 publishing {
   publications {
-    bintrayPublish(MavenPublication) {
-      artifactId artifactId
-      groupId groupId
+    bintray(MavenPublication) {
+      artifactId libArtifactId
+      groupId libGroupId
       version libVersion
 
-      pom {
-        name = libName
-        description = desc
-        url = siteUrl
-        licenses {
-          license {
-            name = 'MIT Lisence'
-            url = 'https://opensource.org/licenses/mit-license.php'
+      artifact sourcesJar
+      artifact javadocJar
+      artifact file("$buildDir\\outputs\\aar\\helloworld-release.aar")
+
+      pom.withXml {
+        def root = asNode()
+        root.appendNode('description', libDescription)
+        root.appendNode('name', libName)
+        root.appendNode('url', 'https://github.com/Hide-KC/HelloWorldLibrary')
+        root.children().last() + pomConfig
+
+        def dependenciesNode = asNode().getAt('dependencies')[0] ?: asNode().appendNode('dependencies')
+        configurations.implementation.allDependencies.each {
+          // Ensure dependencies such as fileTree are not included.
+          if (it.name != 'unspecified') {
+            def dependencyNode = dependenciesNode.appendNode('dependency')
+            dependencyNode.appendNode('groupId', it.group)
+            dependencyNode.appendNode('artifactId', it.name)
+            dependencyNode.appendNode('version', it.version)
           }
-        }
-        developers {
-          developer {
-            id = 'kcpoipoi'
-            name = 'KC'
-            email = 'kcs.dev.labo@gmail.com'
-          }
-        }
-        scm {
-          connection = gitUrl
-          developerConnection = siteUrl
-          url = siteUrl
         }
       }
     }
   }
   repositories {
     maven {
-      url = "$buildDir/repo"
+      url "$buildDir/repo"
     }
   }
 }
@@ -74,41 +103,19 @@ bintray {
 
   user = props.bintray_user
   key = props.bintray_key
+  publications = ['bintray']
 
-  configurations = ['archives'] //When uploading configuration files
-  publications = ['bintrayPublish']
   pkg {
     repo = 'maven'
-    name = "PinningListView"
-    desc = 'Custom RecyclerView that draws a header that represents a break.'
+    name = libName
+    desc = libDescription
     publish = true
     override = true
-    websiteUrl = siteUrl
-    issueTrackerUrl = 'https://github.com/Hide-KC/PinningListView/issues'
-    vcsUrl = gitUrl
-    licenses = ['MIT']
-    labels = ['aar', 'android', 'custom view', 'recycler view']
-    publicDownloadNumbers = true
+    userOrg = devId
+    licenses = [licenseName]
+    vcsUrl = 'https://github.com/Hide-KC/HelloWorldLibrary.git'
     version {
       name = libVersion
     }
   }
-}
-
-//signing {
-//    sign publishing.publications.mavenJava
-//}
-
-task sourcesJar(type: Jar) doLast {
-  classifier = 'sources'
-  from android.sourceSets.main.java.srcDirs
-}
-
-task javadocJar(type: Jar, dependsOn: dokka) doLast {
-
-}
-
-artifacts {
-  archives sourcesJar
-  archives javadocJar
 }
