--- a/helloworld/deploy.gradle
+++ b/helloworld/deploy.gradle
@@ -61,40 +61,42 @@ def loadProperties(filename) {
   return props
 }
 
-publishing {
-  publications {
-    bintray(MavenPublication) {
-      artifactId libArtifactId
-      groupId libGroupId
-      version libVersion
+project.afterEvaluate {
+  publishing {
+    publications {
+      bintray(MavenPublication) {
+        artifactId libArtifactId
+        groupId libGroupId
+        version libVersion
 
-      artifact sourcesJar
-      artifact javadocJar
-      artifact file("$buildDir\\outputs\\aar\\helloworld-release.aar")
+        artifact sourcesJar
+        artifact javadocJar
+        artifact bundleReleaseAar
 
-      pom.withXml {
-        def root = asNode()
-        root.appendNode('description', libDescription)
-        root.appendNode('name', libName)
-        root.appendNode('url', 'https://github.com/Hide-KC/HelloWorldLibrary')
-        root.children().last() + pomConfig
+        pom.withXml {
+          def root = asNode()
+          root.appendNode('description', libDescription)
+          root.appendNode('name', libName)
+          root.appendNode('url', 'https://github.com/Hide-KC/HelloWorldLibrary')
+          root.children().last() + pomConfig
 
-        def dependenciesNode = asNode().getAt('dependencies')[0] ?: asNode().appendNode('dependencies')
-        configurations.implementation.allDependencies.each {
-          // Ensure dependencies such as fileTree are not included.
-          if (it.name != 'unspecified') {
-            def dependencyNode = dependenciesNode.appendNode('dependency')
-            dependencyNode.appendNode('groupId', it.group)
-            dependencyNode.appendNode('artifactId', it.name)
-            dependencyNode.appendNode('version', it.version)
+          def dependenciesNode = asNode().getAt('dependencies')[0] ?: asNode().appendNode('dependencies')
+          configurations.implementation.allDependencies.each {
+            // Ensure dependencies such as fileTree are not included.
+            if (it.name != 'unspecified') {
+              def dependencyNode = dependenciesNode.appendNode('dependency')
+              dependencyNode.appendNode('groupId', it.group)
+              dependencyNode.appendNode('artifactId', it.name)
+              dependencyNode.appendNode('version', it.version)
+            }
           }
         }
       }
     }
-  }
-  repositories {
-    maven {
-      url "$buildDir/repo"
+    repositories {
+      maven {
+        url "$buildDir/repo"
+      }
     }
   }
 }
