参照できない問題解決。モジュール名とartifactIDの一致

--- a/helloworld/deploy.gradle
+++ b/helloworld/deploy.gradle
@@ -3,10 +3,10 @@ apply plugin: 'org.jetbrains.dokka-android'
 apply plugin: 'com.jfrog.bintray'
 
 ext {
-  libArtifactId = "helloworldlibrary"
   libGroupId = "work.kcs_labo"
+  libArtifactId = project.name //モジュール名を指定
   libVersion = "0.0.1"
-  libName = 'HelloWorldLibrary'
+  pkgName = 'HelloWorldLibrary'
   libDescription = 'Android sample library for Tech07.'
   devId = 'hide-kc'
   devName = 'KC'
@@ -15,9 +15,6 @@ ext {
   licenseUrl = 'https://opensource.org/licenses/mit-license.php'
   siteUrl = 'https://github.com/Hide-KC/HelloWorldLibrary'
 }
-
-// This is the library version used when deploying the artifact
-project.version = libVersion
 
 dokka {
   outputFormat = 'html'
@@ -77,7 +74,7 @@ project.afterEvaluate {
         pom.withXml {
           def root = asNode()
           root.appendNode('description', libDescription)
-          root.appendNode('name', libName)
+          root.appendNode('name', pkgName)
           root.appendNode('url', siteUrl)
           root.children().last() + pomConfig
 
@@ -111,15 +108,20 @@ bintray {
 
   pkg {
     repo = 'maven'
-    name = libName
+    name = pkgName
     desc = libDescription
     publish = true
     override = true
-    userOrg = user
     licenses = [licenseName]
     vcsUrl = siteUrl + '.git'
+    publicDownloadNumbers = true
     version {
       name = libVersion
     }
   }
+}
+
+artifacts {
+  archives sourcesJar
+  archives javadocJar
 }
